feat: 添加unionid 获取

--- a/views/web/index.ejs
+++ b/views/web/index.ejs
@@ -43,7 +43,7 @@
         <h3>获取用户信息相关</h3><br>
         <button type="button" class="btn btn-primary" id="getOpenid1">获取openid(静默授权)</button>
         <button type="button" class="btn btn-danger" id="getOpenid2">获取openid(确认授权)</button>
-        <button type="button" class="btn btn-success" id="queryInfo">查询个人信息</button>
+        <button type="button" class="btn btn-success" id="queryInfo">获取unionid</button>
         <!-- <button type="button" class="btn btn-secondaryr">Danger</button>
         <button type="button" class="btn btn-warning">Warning</button>
         <button type="button" class="btn btn-info">Info</button>
